--- a/projetproba.ipynb
+++ b/projetproba.ipynb
@@ -1090,10 +1090,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "from scipy.spatial.distance import cdist\n",
     "\n",
     "## Growth after one year\n",
     "def height_1(b,d): \n",
@@ -1101,10 +1103,11 @@
     "    return H_t\n",
     "\n",
     "\n",
-    "\n",
     "def computeMinDist(X): \n",
-    "    d = X[:, np.newaxis,:] - X[np.newaxis,:,:]\n",
-    "    d_min = np.linalg.norm(d, axis = 2)\n",
+    "    d = cdist(X, X)\n",
+    "    d_min = np.zeros(X.shape[0])\n",
+    "    for i in range(len(d)):\n",
+    "        d_min[i] = np.min(np.delete(d[i], i))\n",
     "    return d_min\n",
     "\n",
     "## Vectorized version of functions\n",
@@ -1157,7 +1160,6 @@
     "        if b == 1:\n",
     "            j = 0\n",
     "            while j < len(h):\n",
-    "                print(h_new[j])\n",
     "                if np.random.uniform(0, 1)<probDecim(h_new[j],pmax):\n",
     "                    h=np.delete(h,j)\n",
     "                    h_new=np.delete(h_new,j)\n",
@@ -1171,7 +1173,6 @@
     "        \n",
     "        ## Find which trees have just reached 3m\n",
     "        talltrees = [[], []]\n",
-    "        print(\"X = \", X)\n",
     "        for i in range(X.shape[0]):\n",
     "            if (h[i]<3) and (h_new[i]>=3):\n",
     "                talltrees[0].append(X[i, 0])\n",
@@ -1185,7 +1186,6 @@
     "                if ((x>= 0) & (y>= 0) & (x<= 100) & (y<= 100)):\n",
     "                    X=np.vstack((X,[x,y,0]))\n",
     "                    h_new=np.append(h_new, 0)\n",
-    "                    print(\"enfants = \", enfants)\n",
     "\n",
     "                \n",
     "        ## Update heights\n",
@@ -1198,20 +1198,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.13247478e+00 4.90878758e+01 6.61909224e+01 4.58334389e+01\n",
+      " 3.49309683e+01 9.28498538e+00 5.62021024e+01 4.28049470e+01\n",
+      " 4.16976756e+01 3.59268223e+01 9.27978722e+01 6.39171665e+01\n",
+      " 3.37398974e+01 8.49658487e+01 3.07307063e+01 6.24820929e+01\n",
+      " 3.46159228e+01 6.37596038e+01 2.66815500e+00 9.77199931e+01\n",
+      " 2.05723249e+01 6.31909514e+01 5.95351905e+01 7.24299480e+00\n",
+      " 9.32916749e+01 9.74958303e-02 2.33983828e+01 3.62464763e+01\n",
+      " 7.94924919e+01 7.32539852e+00 1.26740316e+01 2.45169658e+01\n",
+      " 9.47541098e+01 2.83052325e+01 5.50628156e+01 1.12436324e+01\n",
+      " 4.38176797e+01 6.00480755e+01 4.17109858e+01 8.51189323e+01\n",
+      " 1.85452386e+01 3.12964693e+01 4.22243192e+01 3.92334048e+01\n",
+      " 4.99937361e+01 7.39329560e+01 4.83599358e+01 2.72952845e+01\n",
+      " 9.35995966e+01 6.24451351e+01 8.66755424e+01 8.87694780e+01\n",
+      " 4.89772535e+01 5.90901821e+01 6.73925150e+01 8.99536112e+01\n",
+      " 2.30607933e+01 6.60673683e+01 7.34352660e+01 8.74168274e+01\n",
+      " 9.95643405e+01 3.70854741e+01 7.91321571e+01 4.89024218e+01\n",
+      " 6.36666221e+01 1.39588658e+01 3.23788929e+01 9.81193243e+01\n",
+      " 6.39546918e+01 6.36812194e+01 8.44118067e+01 1.54348851e+00\n",
+      " 8.98187791e+01 5.29768193e+01 6.86987548e+01 5.27718746e+01\n",
+      " 6.25054591e+01 4.59360865e-01 6.00502875e+01 4.75518353e+01\n",
+      " 6.34676827e+01 4.14608113e+01 4.30335912e+01 4.76199593e+01\n",
+      " 5.73479736e+01 6.43534521e+01 7.37664484e+01 2.87580823e+01\n",
+      " 9.11207612e+01 1.53289576e+01 5.99577774e+01 5.40432024e+00\n",
+      " 5.27851377e+00 8.19862173e+01 2.43114583e+01 1.02896771e+01\n",
+      " 2.13607572e+01 6.08954641e+01 8.76292482e+00 9.93821163e+01\n",
+      " 4.09195090e+01 5.63884214e+01 9.19639067e+01 7.37211756e+01\n",
+      " 2.32674252e+01 7.40573741e+01 4.02168339e+01 9.95978698e+01\n",
+      " 8.78168573e+01 4.22198700e+01 7.01317027e+01 9.34812731e+01\n",
+      " 2.25084246e+01 2.78791932e+00 9.95219272e+01 7.75191958e+00\n",
+      " 1.77649700e+01 6.11651431e+01 8.65757627e+00 1.30938831e+01\n",
+      " 7.89299333e+01 7.41931840e+01 2.05847315e+01 8.00795487e+01\n",
+      " 9.17172787e+01 7.29120827e+00 4.17257760e+01 4.21441395e+01\n",
+      " 6.19847474e+01 6.59376000e+01 9.05413114e+01 2.44413326e+01\n",
+      " 7.28248173e+01 2.96535842e+00 9.63447027e+00 8.80518612e+01\n",
+      " 7.12790747e+01 7.24407454e+01 1.46392032e+01 2.78628658e+01\n",
+      " 8.28805880e+00 4.00892703e+00 1.63349697e+01 3.34244085e+00\n",
+      " 1.68076156e+01 6.76267509e+01 1.40037316e+01 8.54423127e+01\n",
+      " 5.55139129e+01 6.55384830e+01 3.15805149e+01 5.90781287e+01\n",
+      " 5.26746877e+01 8.27409461e+01 7.56888557e+01 9.12887995e+01\n",
+      " 5.26756067e+01 9.40575304e+01 6.32585132e+01 7.18979873e+01\n",
+      " 5.07110599e+01 1.77743665e+00 9.81372312e+01 2.81449132e+01\n",
+      " 5.03771220e+01 1.72794764e+01 9.47962589e+01 1.83138861e+00\n",
+      " 3.23786253e+01 2.15885395e+00 9.37995839e+01 9.67805972e+01\n",
+      " 9.66432810e+00 9.29650549e+01 9.54179261e+01 6.79532895e+01\n",
+      " 5.13655445e+01 4.15874334e+01 5.72128894e+01 9.81486560e+01\n",
+      " 7.54720643e+01 5.96675498e+01 5.73185733e+01 4.86947032e+01\n",
+      " 3.72603164e+01 5.99549074e+01 1.38789278e+01 3.23905071e+01\n",
+      " 7.62428614e+00 6.27218209e+01 7.31462915e+01 3.43285449e+01\n",
+      " 5.05256652e+00 3.17134805e+01 8.57979400e+00 9.60245838e+01\n",
+      " 9.81237112e+01 6.64902213e+01 8.14843124e+01 2.44457356e+01\n",
+      " 8.94350496e+01 1.23694144e+01 7.02959440e+01 1.72069548e+00\n",
+      " 1.13894301e+01 2.89709893e+01 1.03991613e+01 6.69860920e+01\n",
+      " 7.44412507e+01 6.53047449e+00 9.00302887e+01 6.00716239e+01\n",
+      " 8.68498282e+01 4.66308890e+01 7.32475182e+01 7.71352834e+01\n",
+      " 4.31539474e+01 5.39558151e+01 4.34950874e+01 2.79831664e+01\n",
+      " 7.29977764e+01 4.31728576e+01 3.69361523e+01 5.74155250e+01\n",
+      " 1.09351529e+01 9.07450354e+01 6.00906922e+01 5.94930003e+01\n",
+      " 6.57649992e+01 7.07069593e+01 6.83590528e+01 8.04816020e+01\n",
+      " 8.30726639e+01 5.71093899e+01 6.88992347e+01 3.79597965e+01\n",
+      " 1.17602605e+01 4.18097214e+01 7.97044872e+00 9.32425027e+01\n",
+      " 9.64528264e+01 3.92551023e+01 9.50658067e+01 5.71342655e+01\n",
+      " 6.35493390e+01 3.16937089e+01 9.23034711e+01 3.47807628e+00\n",
+      " 3.15121382e+01 8.14245479e+01 5.56330172e+01 1.06264441e+00\n",
+      " 1.62153686e+00 8.09267281e+01 4.26071295e+01 8.72381467e+01\n",
+      " 8.19682420e+00 6.60132342e+01 1.15605616e+01 4.44518102e+01\n",
+      " 6.01907231e+01 5.21280992e+01 5.07505593e+01 2.68970911e+01\n",
+      " 4.13331330e+01 7.22568344e+01 5.54465275e+01 6.94670986e+01\n",
+      " 9.05478035e+01 1.92459419e+01 8.60914779e+01 9.70120670e+01\n",
+      " 8.18291709e+01 6.06504450e+01 5.83702810e+01 9.14459081e+00\n",
+      " 8.36928675e+01 6.12646911e+01 6.31887440e+01 8.12874820e+01\n",
+      " 5.77744060e+01 5.76273779e+01 5.35340195e-01 6.39469310e+01\n",
+      " 3.89957384e+01 6.59661986e+01 2.62963084e+01 4.45385146e+01\n",
+      " 9.20178544e+01 8.64535489e+01 9.45296720e+01 4.81777302e+01\n",
+      " 5.61494997e+01 6.22198680e+01 8.39677809e+01 9.27357443e+01\n",
+      " 7.05513799e+01 7.61469128e+01 4.21896371e+01 1.46556988e+01\n",
+      " 3.79472531e+01 4.58664610e+01 6.12741442e+01 9.63818497e+00\n",
+      " 8.72212115e+01 9.56233747e+01 4.82230838e+01 8.09540676e+01\n",
+      " 4.18632081e+01 7.22744633e+01 9.42607141e+00 2.79176681e+01\n",
+      " 6.96443350e+01 2.45895272e+01 3.91418623e+00 5.94729520e+01\n",
+      " 9.99403417e+01 5.88755915e+01 3.43287486e+01 8.41865700e+01\n",
+      " 3.52032744e+00 1.43141883e+01 9.48671101e+01 4.82408407e+01\n",
+      " 5.26163173e+01 5.33502459e+01 8.65714995e+01 2.45241612e+01\n",
+      " 7.07807261e+01 9.44959666e+01 8.27979791e+01 3.31708079e+01\n",
+      " 5.27907948e+01 5.61704387e+01 6.69341878e+00 9.90106705e+01\n",
+      " 5.12161299e+01 2.81799804e+01 5.83258007e+01 9.65251556e+01\n",
+      " 5.95011486e+01 5.12710801e+01 6.05273518e+01 5.11930819e+01\n",
+      " 3.69915972e+01 8.10111475e+01 7.13161946e+01 2.64133704e+01\n",
+      " 3.43548456e+00 6.39715060e+01 5.53911240e+01 4.94105596e+01\n",
+      " 6.75135189e+01 9.87942784e+01 8.84263802e+01 7.53848731e+01\n",
+      " 9.85445907e+01 2.74081527e+01 8.52157441e+01 1.54106136e+00\n",
+      " 5.72539021e+01 2.24413797e+01 4.77266289e+01 8.65745277e+00\n",
+      " 4.90175225e+01 4.24808883e+01 5.94270811e+01 4.55053083e+00\n",
+      " 6.22965605e+01 6.08759618e+01 5.84258841e-01 3.00589922e+00\n",
+      " 7.20460494e+01 6.24729512e+01 1.69843660e+01 8.52853632e+01\n",
+      " 2.77901144e+01 2.55761391e+01 8.98207978e+01 8.77637369e+01\n",
+      " 8.66518017e+01 1.03735875e+01 8.13785586e+01 3.68595666e+01\n",
+      " 1.81677694e+00 8.95478682e+01 9.13055138e+01 5.68496145e+00\n",
+      " 8.95875914e+01 7.50640808e+01 2.86584685e+01 6.78674616e+01\n",
+      " 2.66526288e+01 7.21993138e+01 1.25476304e+01 9.81833823e+01\n",
+      " 5.15249789e+01 7.40356457e+01 1.06510713e+01 8.16148852e+01\n",
+      " 3.50636985e+00 2.98515393e+01 8.95515249e+01 5.73262192e+01\n",
+      " 1.06494222e+01 1.41475924e+01 1.27953986e+01 4.43187315e+01\n",
+      " 9.43177024e+01 1.44049552e+01 3.31939126e+01 3.37697638e+01\n",
+      " 6.26568832e+01 5.93149289e+01 6.78514273e+01 6.19123294e+01\n",
+      " 1.85371522e+01 8.43901616e+01 6.92803480e+01 9.33607925e+00\n",
+      " 5.03691798e+01 8.74303189e+01 2.80917735e+01 8.96158144e+01\n",
+      " 5.22484220e+01 5.94277330e+00 9.31874948e+01 4.27357741e+01\n",
+      " 1.15160052e+01 4.33112049e+01 2.87247458e+00 7.47906124e+01\n",
+      " 1.31425067e+01 9.42197515e+01 5.82348764e+00 6.17804435e+01\n",
+      " 7.37628835e+01 6.67385396e+01 6.93930875e+01 4.72227059e+01\n",
+      " 2.13832670e+01 1.80019192e+01 9.96711444e+01 5.24226832e+01\n",
+      " 4.46056742e+01 1.23057309e+01 7.74995480e+01 5.28030369e+01\n",
+      " 7.34551745e+01 2.00789660e+01 8.88536414e+01 3.36830146e+01\n",
+      " 3.33225878e+01 1.28493034e+01 9.78567817e+01 9.40070031e+01\n",
+      " 7.09609319e+00 1.41766179e+01 7.46560244e+01 1.40673962e+01\n",
+      " 2.76355039e+01 7.98077235e+01 8.71767907e+00 5.75608242e+01\n",
+      " 3.31900541e+01 2.06147441e+01 8.80931795e+01 3.52767465e+01\n",
+      " 7.84919778e+01 2.76847190e+01 7.48301442e+01 5.43090463e+01\n",
+      " 5.44471086e+01 2.59035732e+01 1.73251314e+00 2.11383426e+00\n",
+      " 8.16179652e+01 2.87318986e+00 8.69717017e+01 1.00252305e+01\n",
+      " 3.01919173e+01 3.62388326e+01 4.52082177e+01 9.76232317e+01\n",
+      " 5.98678093e+01 9.68246528e+01 9.82072571e+01 5.11186776e+01\n",
+      " 1.46532322e+01 8.40449747e+01 8.50175421e+01 1.93629907e+01\n",
+      " 2.68615620e+01 9.92354871e+01 7.85097374e+01 7.25341697e+00\n",
+      " 9.00057174e+01 9.72962872e+01 5.95924815e+01 8.57936921e+00\n",
+      " 8.55407202e+01 2.73436727e+01 9.85182782e+01 1.77606814e+01\n",
+      " 6.62086127e+00 8.20628955e+00 1.24884363e+01 4.69882924e+00\n",
+      " 4.48345459e+01 7.07122588e+01 1.25460997e+01 6.97354006e+01\n",
+      " 8.70530727e+01 2.24759713e+01 8.77783561e+01 9.01599097e+01\n",
+      " 8.82513546e+01 3.55552154e+01 4.36972588e+01 9.57590608e+01\n",
+      " 8.00934263e+00 1.91475302e+01 7.90726873e+01 9.63379234e+01\n",
+      " 3.83731148e+01 9.65424241e+01 7.49374167e+01 9.38660715e+01\n",
+      " 4.49956456e+01 3.02670837e+01 9.17572064e+01 3.61727539e+01\n",
+      " 1.53319601e+01 8.47891386e+01 6.85858567e+01 3.78340077e+01\n",
+      " 8.35952701e+01 5.64881845e+01 3.51207499e+01 3.73246261e+01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X=poisson2(100,100)\n",
+    "print(X[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([[99.05146487,  1.22451087,  0.        ],\n",
+      "       [71.98608707, 84.2852169 ,  0.        ],\n",
+      "       [ 3.33341733, 52.75655605,  0.        ],\n",
+      "       ...,\n",
+      "       [12.8503864 , 39.60520987,  0.        ],\n",
+      "       [ 7.268737  , 42.86640542,  0.        ],\n",
+      "       [82.68710488, 23.45953259,  0.        ]]), array([23.80366544, 21.84496628, 20.21120135, ...,  0.        ,\n",
+      "        0.        ,  0.        ]))\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "tuple indices must be integers or slices, not tuple",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m nbyears\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m## Generate simulation\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[43msimForest\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnbyears\u001b[49m\u001b[43m,\u001b[49m\u001b[43mlam\u001b[49m\u001b[43m,\u001b[49m\u001b[43mparam\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpmax\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(X)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m## Plot\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[14], line 63\u001b[0m, in \u001b[0;36msimForest\u001b[1;34m(nbyears, lam, param, pmax)\u001b[0m\n\u001b[0;32m     61\u001b[0m j \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m     62\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m j \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mlen\u001b[39m(h):\n\u001b[1;32m---> 63\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m<\u001b[39m\u001b[43mprobDecim\u001b[49m\u001b[43m(\u001b[49m\u001b[43mh_new\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpmax\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m     64\u001b[0m         h\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mdelete(h,j)\n\u001b[0;32m     65\u001b[0m         h_new\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mdelete(h_new,j)\n",
-      "Cell \u001b[1;32mIn[14], line 27\u001b[0m, in \u001b[0;36mprobDecim\u001b[1;34m(h, pmax)\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mprobDecim\u001b[39m(h,pmax):\n\u001b[1;32m---> 27\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mmin\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpmax\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mh\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[30], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(X)\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m## Plot\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m X2\u001b[38;5;241m=\u001b[39m\u001b[43mX\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     19\u001b[0m plt\u001b[38;5;241m.\u001b[39mscatter(X2[:,\u001b[38;5;241m0\u001b[39m],X2[:,\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m     20\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlim(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m100\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: tuple indices must be integers or slices, not tuple"
      ]
     }
    ],
@@ -1231,8 +1395,10 @@
     "## Generate simulation\n",
     "X = simForest(nbyears,lam,param,pmax)\n",
     "print(X)\n",
+    "\n",
     "## Plot\n",
-    "plt.scatter(X[:,0],X[:,1],c=h,s=1)\n",
+    "X2=X[:, :2]\n",
+    "plt.scatter(X2[:,0],X2[:,1])\n",
     "plt.xlim(0,100)\n",
     "plt.ylim(0,100)\n",
     "plt.colorbar()\n",
